yoshimi 1.7.0 M

2020-3-6 Will
* Patched in additional Solo type 'Channel' from Matthew.
  Made a few minor corrections.

2020-3-4 Will
* Revised Solo switch selection for performance and clarity.

2020-3-3 Will
* Merged in various fixes from Iain.
* BugFix: not closing directories after use :(
* Revised file/directory copying.
  Options are now: always write, only missing, only newer

2020-3-1 Will
* Improved code for spacing new bank IDs.
* BugFix: LV2 not updating MIDI-learn GUI.
  Reinstated original window control, but now with
  correct action being set!

2020-2-17 Will
* Implemented Hyperbolic Secant Waveform option.
* Converted waveshape numbers to labels.
* Adjusted some CLI text.

2020-2-14 Will
* If no banks are found at startup a new one is generated.
  This will be in the .local directory and will contain one
  subsynth instrument.

2020-2-13 Will
* BugFix: MIDI-learn crash if accessing non-exisitent effect.
  This need more work to correctly report to the CLI.
* Suppressed test message in filterUI.
* Updated docs.

2020-2-11 Will
* Corrected MIDI-Learn save title bar.
* New bank structure almost complete.
  There is a workround for an anomaly where
  startup seems to create phantom empty banks.

2020-2-9 Will
* More revision of banks code.
  Still some startup anomallies.
* Provisional fix for CLI part setting oddity.
  Need to do more on this.

2020-2-8 Will
* Corrected CLI not setting bank from top level.
* Further improvements to missing root/bank handling.
* Transfer of default banks to .local in place.
  Still some corner cases to be sorted.

2020-2-6 Will
* .local/yoshimi now changed as /local/share/yoshimi
* Copyfile can now copy only if newer.
  Also passed through copydir.
* Copying defaults to .local/share/yoshimi uses 'newer'

2020-2-4 Will
:rebank: Basic structure mostly complete.
:rebank: Testing for defects and redundant code.
:rebank: Removed considerable redundant code.
:rebank: Define bank root at strartup restored.