@@ -3,6 +3,8 @@ yoshimi 1.7.0 M
 2020-3-6 Will
 * Patched in additional Solo type 'Channel' from Matthew.
   Made a few minor corrections.
+* Applied some optimisations to Solo Channel mode.
+* Updated docs.
 
 2020-3-4 Will
 * Revised Solo switch selection for performance and clarity.
